src/index.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');

@import "tailwindcss";

:root {
  /* Base styles */
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  /* Theme variables - Dark mode by default */
  --color-text: rgba(255, 255, 255, 0.87);
  --color-background: #101010;
  --color-primary: #ff8364;
  --color-primary-hover: #f25e53;
  --color-button-bg: linear-gradient(60deg, #252525, #353535);
  --color-button-border: rgba(230, 230, 230, .25);
  --color-button-hover: #ff9564;
}

/* Light theme overrides */
[data-theme='light'] {
  --color-text: #213547;
  --color-background: rgb(227, 227, 227);
  --color-primary: #ba472b;
  --color-primary-hover: #b14f37;
  --color-button-bg: linear-gradient(60deg, #d7d7d7, #d0caca);
  --color-button-border: rgba(0, 0, 0, .5);
  --color-button-hover: #953720;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  color: var(--color-text);
  background-color: var(--color-background);
}

a {
  font-weight: 500;
  color: var(--color-primary);
  text-decoration: inherit;
}
a:hover {
  color: var(--color-primary-hover);
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

h2 {
  font-size: 2.4em;
  line-height: 1.2;
  font-weight: 700;
}

h3 {
  font-size: 1.8em;
  line-height: 1.2;
  font-weight: 700;
}

h4 {
  font-size: 1.4em;
  line-height: 1.3;
  font-weight: 600;
}

h5 {
  font-size: 1.2em;
  line-height: 1.4;
  font-weight: 600;
}

h6 {
  font-size: 1em;
  line-height: 1.5;
  font-weight: 600;
}


button {
  border-radius: 8px;
  border: .5px solid var(--color-button-border);
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background: var(--color-button-bg);
  color: var(--color-text);
  cursor: pointer;
  box-shadow: 0 3px 25px .5px var(--color-button-border);
}
button:hover {
  border-color: var(--color-button-hover);
}
button:focus,
button:focus-visible {
  outline: none;
  border: 2px solid var(--color-primary);
}

input {
  padding: 0.5em 0.8em;
  font-size: .8rem;
  border: 1px solid var(--color-button-border);
  border-radius: 2rem;
  background-color: var(--color-background);
  color: var(--color-text);
}

input::placeholder {
  color: var(--color-text);
  opacity: 0.6;
  font-size: .8rem;
}

input::selection {
  background-color: var(--color-primary);
  color: var(--color-background);
}

input:hover {
  border-color: var(--color-primary);
}

input:focus {
  outline: none;
  border: 2px solid var(--color-primary);
}

textarea {
  padding: 0.5em 0.8em;
  font-size: .8rem;
  border: 1px solid var(--color-button-border);
  border-radius: 1rem;
  background-color: var(--color-background);
  color: var(--color-text);
  resize: vertical;
}

textarea::placeholder {
  color: var(--color-text);
  opacity: 0.6;
  font-size: .8rem;
}


* {
  transition-property: background, background-color, color, border-color;
  transition-duration: .25s;
  transition-timing-function: ease-in;
}

::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-thumb {
  background-color: rgba(150, 150, 150, 0.4);
  border-radius: 4px;
}

::-webkit-scrollbar-thumb:hover {
  background-color: rgba(150, 150, 150, 0.6);
}

::-webkit-scrollbar-track {
  background: rgba(100, 100, 100, 0.2);
}

